--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@mui/icons-material": "^6.4.8",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.0.14",
     "lucide-react": "^0.483.0",
     "parking": "file:",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
